--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -39,3 +39,7 @@ monolog:
 
 #swiftmailer:
 #    delivery_addresses: ['me@example.com']
+
+parameters:
+    authenticator: 'AppBundle\Security\Authenticator\TestAuthenticator'
+    provider: 'AppBundle\Security\Provider\TestUserProvider'
