Changing security to set authentication in function of the environment

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,7 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         main:
-            id: AppBundle\Security\Provider\TestUserProvider
+            id: '%provider%'
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -16,7 +16,7 @@ security:
         main:
             pattern: ^/
             guard:
-                authenticator: AppBundle\Security\Authenticator\TestAuthenticator
+                authenticator: '%authenticator%'
                 provider: main
             logout_on_user_change: true
             anonymous: ~
