--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -23,4 +23,4 @@ monolog:
 
 parameters:
     authenticator: 'unicesil.shibboleth_authenticator'
-    provider: '%test.provider%'
+    provider: 'AppBundle\Security\Provider\ShibbolethUserProvider'
