--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -60,6 +60,9 @@ services:
     AppBundle\Form\Course\EditPresentationCourseInfoType:
         arguments: [ '%course_teacher_factory%' ]
 
+    AppBundle\Form\CourseInfo\Presentation\TeachersType:
+        arguments: [ '%course_teacher_factory%' ]
+
     AppBundle\Form\CourseSectionActivity\CourseSectionActivityType:
         arguments: [ '@syllabus_entity_manager' ]
 
