--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "admin-lte": "^3.0.1",
     "bootbox": "^5.1.1",
     "bootstrap4-toggle": "^3.5.0",
     "ckeditor": "^4.11.4",
