ajout de la liste des années dans le back office administrateur

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+app_year:
+    resource: "@AppBundle/Controller/YearController.php"
+    type:     annotation
+
 app:
     resource: '@AppBundle/Action/'
     type: annotation
