--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -141,3 +141,7 @@ unice_sil_shibboleth:
     attributes: ['eppn', 'mail', 'givenName', 'sn', 'uid', 'unscoped-affiliation']  # The list of attributes returned by Shibboleth Service Provider
     login_target : ''  # The route to which the user will be redirected after login. If this parameter is not filled, the user will be redirected to the page from which he comes. (default = null)
     logout_target : ''  # The route to which the user will be redirected after logout. If this parameter is not filled, the user will be redirected to the page from which he comes. (default = null)
+
+knp_paginator:
+    template:
+        pagination: 'partial/_pagination.html.twig'
