--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "exercise/htmlpurifier-bundle": "^2.0",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-paginator-bundle": "4.1.1",
         "manuelodelain/linkify-twig-extension": "^1.0",
         "ramsey/uuid": "^3.8",
         "sensio/distribution-bundle": "^5.0.19",
