--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,6 +46,7 @@ twig:
         - 'bootstrap_4_layout.html.twig'
         - '@TetranzSelect2Entity/Form/fields.html.twig'
         - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+        - '@LexikFormFilter/Form/form_div_layout.html.twig'
 
 # Doctrine Configuration
 doctrine:
