--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@symfony/webpack-encore": "^0.23.0",
     "autoprefixer": "^9.5.1",
     "bootstrap": "^4.3.1",
+    "jquery.autocomplete": "^1.2.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
