--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "jquery-sortablejs": "^1.0.1",
     "popper.js": "^1.15.0",
     "select2": "^4.0.5",
-    "sortablejs": "^1.8.4"
+    "sortablejs": "1.9.0"
   }
 }
