--- a/composer.json
+++ b/composer.json
@@ -40,14 +40,14 @@
         "unicesil/shibboleth-bundle": "^1.0",
         "unicesil/syllabus-apogee-importer-bundle": ">=1.0",
         "unicesil/syllabus-importer-toolkit": ">=1.0",
-        "unicesil/syllabus-moodle-importer-bundle": ">=1.0"
+        "unicesil/syllabus-moodle-importer-bundle": ">=1.0",
+        "symfony/webpack-encore-bundle": "^1.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "phpunit/phpunit": "^6",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^4.2",
-        "symfony/webpack-encore-bundle": "^1.1"
+        "symfony/phpunit-bridge": "^4.2"
     },
     "scripts": {
         "symfony-scripts": [
