--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootbox": "^5.1.1",
     "bootstrap4-toggle": "^3.5.0",
     "ckeditor": "^4.11.4",
+    "ckeditor-wordcount-plugin": "^1.17.2",
     "core-js": "2",
     "jquery": "^3.3.1",
     "jquery-sortablejs": "^1.0.1",
