--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -71,3 +71,7 @@ parameters:
                 email: mail
                 firstname: givenName
                 lastname: sn
+
+    jwt_authentication_passphrase: ~
+    app_name: 'Syllabus'
+    api_host: ~
