--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,11 @@ app:
 syllabus:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+api_login_check:
+    path: /api/login_check
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
