--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,13 @@
         "exercise/htmlpurifier-bundle": "^2.0",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "^3.5",
         "knplabs/knp-paginator-bundle": "4.1.1",
         "league/csv": "^9.5",
         "lexik/form-filter-bundle": "v5.0.10",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "manuelodelain/linkify-twig-extension": "^1.0",
+        "nelmio/api-doc-bundle": "^3.5",
         "ramsey/uuid": "^3.8",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
@@ -50,7 +53,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^5.0",
+        "symfony/phpunit-bridge": "^4.4.2",
         "symfony/webpack-encore-bundle": "^1.1"
     },
     "scripts": {
