voter + refonte controller (route + security) + ajoutr de controller select2

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,5 +21,9 @@ security:
             logout_on_user_change: true
             anonymous: ~
 
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+
     access_control:
         - { path: ^/, role: ROLE_USER }
+        - { path: ^/admin, role: ROLE_ADMIN }
