Commit de test sur l'ajout d'entité via l'api par formulaire

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -202,3 +202,8 @@ jms_serializer:
     object_constructors:
         doctrine:
             fallback_strategy: "exception" # possible values ("null" | "exception" | "fallback")
+    property_naming:
+        id: 'jms_serializer.identical_property_naming_strategy'
+    handlers:
+        datetime:
+            default_format: "Y-m-d h:i:s" # ISO8601
