--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,6 +46,11 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
+        ROLE_API:
+          - ROLE_API_GET_YEARS
+          - ROLE_API_GET_YEAR
+          - ROLE_API_POST_YEAR
+          - ROLE_API_PUT_YEAR
 
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
