--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "manuelodelain/linkify-twig-extension": "^1.0",
         "nelmio/api-doc-bundle": "^3.5",
+        "peppeocchi/php-cron-scheduler": "^3.0",
         "ramsey/uuid": "^3.8",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
