ajout de la page de maintenance avec le listener adequate

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -5,6 +5,7 @@ services:
         public: false
         bind:
             $mailerSource: '%mailer_source%'
+            $inMaintenance: '%in_maintenance%'
 
     AppBundle\:
         resource: '../../*'
