--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "league/csv": "^9.5",
         "lexik/form-filter-bundle": "v5.0.10",
         "lexik/jwt-authentication-bundle": "^2.6",
+        "lexik/translation-bundle": "^4.0",
         "manuelodelain/linkify-twig-extension": "^1.0",
         "nelmio/api-doc-bundle": "^3.5",
         "peppeocchi/php-cron-scheduler": "^3.0",
