--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery-sortablejs": "^1.0.1",
     "popper.js": "^1.16.0",
     "select2": "^4.0.5",
+    "select2-bootstrap-theme": "^0.1.0-beta.10",
     "sortablejs": "1.9.0"
   }
 }
