--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -55,5 +55,5 @@ security:
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: ROLE_API }
-        - { path: ^/admin, role: ROLE_ADMIN }
+        - { path: "^/[^/]{1,5}/admin", role: ROLE_ADMIN }
         - { path: ^/, role: ROLE_USER }
