--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,6 +84,7 @@ doctrine:
                 auto_mapping: false
                 mappings:
                     AppBundle: ~
+                    DmishhSettingsBundle: ~
             apogee:
                 connection: apogee
                 auto_mapping: false
@@ -208,3 +209,21 @@ jms_serializer:
     handlers:
         datetime:
             default_format: "Y-m-d h:i:s" # ISO8601
+
+dmishh_settings:
+    template: 'setting/manage.html.twig'
+    cache_service: null
+    cache_lifetime: 3600
+    security:
+        manage_global_settings_role: ROLE_USER
+        users_can_manage_own_settings: true
+    serialization: php # database serialization mechanism (php|json)
+    settings:
+        in_maintenance:
+            scope: all # global or user
+            type: AppBundle\Form\Type\CustomCheckboxType # any Symfony form type, or FQCN for Symfony >=3.0
+            options: # options passed to form
+                required: false
+        #            constraints:
+        #                Symfony\Component\Validator\Constraints\Length:
+        #                    min: 5
