--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -5,7 +5,6 @@ services:
         public: false
         bind:
             $mailerSource: '%mailer_source%'
-            $inMaintenance: '%in_maintenance%'
 
     AppBundle\:
         resource: '../../*'
@@ -85,3 +84,6 @@ services:
     #JMS
     jms_serializer.object_constructor:
         alias: jms_serializer.doctrine_object_constructor
+
+    Dmishh\SettingsBundle\Manager\SettingsManager:
+        alias: settings_manager
