Change ddmish settings in config.yml

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -233,8 +233,8 @@ dmishh_settings:
     cache_service: null
     cache_lifetime: 3600
     security:
-        manage_global_settings_role: ROLE_USER
-        users_can_manage_own_settings: true
+        manage_global_settings_role: ROLE_SUPER_ADMIN
+        users_can_manage_own_settings: false
     serialization: php # database serialization mechanism (php|json)
     settings:
         in_maintenance:
