--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,6 +13,13 @@ syllabus.admin:
     defaults:
         _locale: '%locale%'
 
+syllabus.home:
+    path: /
+    methods: GET
+    defaults:
+        _controller: AppBundle:Default:index
+        _locale: '%locale%'
+
 lexik_translation_edition:
     resource: "@LexikTranslationBundle/Resources/config/routing.yml"
     prefix:   /{_locale}/admin/translation
