--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^9.8.2",
     "webpack-notifier": "^1.7.0"
   },
