--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -82,7 +82,10 @@ parameters:
 
     jwt_authentication_passphrase: ~
     app_name: 'Syllabus'
-    api_host: ~
-    locale: ~
-    fallback_locales: ~
-    managed_locales: ~
+    api_host: localhost
+    locale: fr
+    fallback_locales:
+        - fr
+    managed_locales:
+        - fr
+        - en
