--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -5,6 +5,9 @@ services:
         public: false
         bind:
             $mailerSource: '%mailer_source%'
+            $moodlePermissionImporterOptions:
+                url: '%moodle_api_url%'
+                token: '%moodle_api_token%'
 
     AppBundle\:
         resource: '../../*'
@@ -15,8 +18,8 @@ services:
         arguments: ['%test_authenticator%']
 
     # COMMAND
-    AppBundle\Importer\Course\CoursesDuplicateCommand:
-        arguments: ['@syllabus_entity_manager']
+    #AppBundle\Importer\Course\CoursesDuplicateCommand:
+    #    arguments: ['@syllabus_entity_manager']
 
     # ENTITY MANAGER
     syllabus_entity_manager:
