--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,14 @@
     },
     "require": {
         "php": ">=7.2",
+        "ext-json": "*",
         "dmishh/settings-bundle": "2.0.*@dev",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.5",
         "exercise/htmlpurifier-bundle": "^2.0",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
+        "guzzlehttp/guzzle": "^6.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^3.5",
         "knplabs/knp-paginator-bundle": "4.1.1",
