--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -27,6 +27,8 @@ parameters:
     apogee_database_password: ~
     apogee_database_charset: UTF8
 
+    apogee_course_nature_to_import: ['UE', 'ECUE']
+
     moodle_api_url: http://moodle.domain.com/webservice/rest/server.php
     moodle_api_token:
 
