--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -8,6 +8,7 @@ services:
             $moodlePermissionImporterOptions:
                 url: '%moodle_api_url%'
                 token: '%moodle_api_token%'
+            $apogeeCourseNatureToImport: %apogee_course_nature_to_import%
 
     AppBundle\:
         resource: '../../*'
