--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,6 +71,8 @@ doctrine:
                 user: '%apogee_database_user%'
                 password: '%apogee_database_password%'
                 charset: '%apogee_database_charset%'
+                logging: false
+                profiling: false
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         #naming_strategy: doctrine.orm.naming_strategy.underscore
