remove nelmio + api/

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,7 +30,7 @@ security:
                 provider:                 user_db
 
         api:
-            pattern:   ^/api(?!/doc$)
+            pattern:   ^/api
             stateless: true
             guard:
                 provider: user_db
