--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -33,7 +33,7 @@ settings:
     resource: "@DmishhSettingsBundle/Resources/config/routing.yml"
     prefix: /admin/settings
 
-app.swagger_ui:
-    path: /api/doc
-    methods: GET
-    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+api_platform:
+    resource: .
+    type: api_platform
+    prefix: /api
