--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,7 @@ framework:
     assets: ~
     php_errors:
         log: true
+    serializer: { enable_annotations: true }
 
 # Twig Configuration
 twig:
