--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,7 +30,7 @@ security:
                 provider:                 user_db
 
         api:
-            pattern:   ^/api(?!/doc$)
+            pattern: ^/api/
             stateless: true
             guard:
                 provider: user_db
@@ -54,7 +54,7 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api,       roles: ROLE_API }
+        - { path: ^/api/, roles: ROLE_API }
         - { path: "^/[^/]{1,5}/admin/settings", role: ROLE_SUPER_ADMIN }
         - { path: "^/[^/]{1,5}/admin", role: ROLE_ADMIN }
         - { path: ^/, role: ROLE_USER }
