--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -54,6 +54,7 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/, roles: ROLE_API }
         - { path: "^/[^/]{1,5}/admin/settings", role: ROLE_SUPER_ADMIN }
         - { path: "^/[^/]{1,5}/admin", role: ROLE_ADMIN }
