Fix route bug for api courses access

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,6 +5,8 @@ syllabus:
     prefix: /{_locale}
     defaults:
         _locale: '%locale%'
+    requirements:
+        _locale: "fr|en"
 
 syllabus.admin:
     resource: '@AppBundle/Controller/Admin/'
