--- a/app/config/api_filters.yml
+++ b/app/config/api_filters.yml
@@ -23,3 +23,11 @@ services:
     parent: 'api_platform.doctrine.orm.boolean_filter'
     arguments: [{ obsolete: ~ }]
     tags: ['api_platform.filter']
+  code.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [{code: 'exact'}]
+    tags: ['api_platform.filter']
+  type.search_filter:
+    parent: 'api_platform.doctrine.orm.search_filter'
+    arguments: [{type: 'exact'}]
+    tags: ['api_platform.filter']
