--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,17 @@
             "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
         ]
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Unice-SIL/linkify-bundle"
+        }
+    ],
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
         "api-platform/api-pack": "^1.2",
-        "dmishh/settings-bundle": "2.0.*@dev",
+        "dmishh/settings-bundle": "3.0.*@dev",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.5",
@@ -36,17 +42,16 @@
         "lexik/form-filter-bundle": "v5.0.10",
         "lexik/jwt-authentication-bundle": "^2.6",
         "lexik/translation-bundle": "^4.0",
-        "misd/linkify-bundle": "^1.0",
+        "misd/linkify-bundle": "dev-master",
         "peppeocchi/php-cron-scheduler": "^3.0",
         "phpdocumentor/reflection-docblock": "v4.3.4",
         "ramsey/uuid": "^3.8",
-        "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/monolog-bundle": "3.1.0",
+        "symfony/monolog-bundle": "^3.5.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.6.4",
-        "symfony/symfony": "3.4.*",
+        "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/symfony": "4.4.*",
         "tanigami/specification": "^1.3",
         "tetranz/select2entity-bundle": "^2.9",
         "twig/extensions": "^1.5",
@@ -58,7 +63,6 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3",
         "symfony/webpack-encore-bundle": "^1.1"
     },
@@ -90,6 +94,10 @@
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
+        },
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.4.*"
         },
         "branch-alias": null
     }
