--- a/config/packages/stof_doctrine_extensions.yaml
+++ b/config/packages/stof_doctrine_extensions.yaml
@@ -1,5 +1,5 @@
 stof_doctrine_extensions:
-  default_locale: '%locale%'
+  default_locale: '%env(LOCALE)%'
   translation_fallback: true
   persist_default_translation: true
   orm:
