--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -1,6 +1,6 @@
 lexik_jwt_authentication:
   secret_key:       '%kernel.project_dir%/app/config/jwt/private.pem' # required for token creation
   public_key:       '%kernel.project_dir%/app/config/jwt/public.pem'  # required for token verification
-  pass_phrase:      '%jwt_authentication_passphrase%' # required for token creation, usage of an environment variable is recommended
+  pass_phrase:      '%env(JWT_AUTHENTICATION_PASSPHRASE)%' # required for token creation, usage of an environment variable is recommended
   token_ttl:        3600
   user_identity_field: username
