--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,6 +1,6 @@
 swiftmailer:
-  transport: '%mailer_transport%'
-  host: '%mailer_host%'
-  username: '%mailer_user%'
-  password: '%mailer_password%'
+  transport: '%env(MAILER_TRANSPORT)%'
+  host: '%env(MAILER_HOST)%'
+  username: '%env(MAILER_USER)%'
+  password: '%env(MAILER_PASSWORD)%'
   spool: { type: memory }
