--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,7 +1,41 @@
-controllers:
-  resource: ../../src/Controller/
+## L'ordre a une importance !!!!!!!!!!
+syllabus:
+  resource: '@AppBundle/Controller/'
   type: annotation
+  prefix: /{_locale}
+  defaults:
+    _locale: '%locale%'
+  requirements:
+    _locale: "fr|en"
 
-kernel:
-  resource: ../../src/Kernel.php
+syllabus.admin:
+  resource: '@AppBundle/Controller/Admin/'
   type: annotation
+  prefix: /{_locale}/admin
+  defaults:
+    _locale: '%locale%'
+
+syllabus.home:
+  path: /
+  methods: GET
+  defaults:
+    _controller: AppBundle:Default:index
+    _locale: '%locale%'
+
+lexik_translation_edition:
+  resource: "@LexikTranslationBundle/Resources/config/routing.yml"
+  prefix:   /{_locale}/admin/translation
+  defaults:
+    _locale: '%locale%'
+
+api_login_check:
+  path: /api/login_check
+
+settings:
+  resource: "@DmishhSettingsBundle/Resources/config/routing.yml"
+  prefix: /admin/settings
+
+api_platform:
+  resource: .
+  type: api_platform
+  prefix: /api
