--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ yarn-error.log
 /app/config/jwt/*
 /app/config/parameters.yml
 /app/config/jwt
+/config/jwt/*
+/config/jwt
 /app/Resources/views/jquery.collection.html.twig
 /build/
 !/var/cache
