--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /.idea/
 
 ###> symfony/framework-bundle ###
-.env.local
+/.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
