--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfony/flex": "^1.11",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/ldap": "4.4.*",
         "symfony/monolog-bundle": "^3.5.0",
         "symfony/orm-pack": "^2.1",
         "symfony/polyfill-apcu": "^1.0",
