--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,7 +1,7 @@
 framework:
   #esi: ~
-  translator: { fallbacks: '%env(json:FALLBACK_LOCALES)%' }
-  secret: '%env(SECRET)%'
+  translator: { fallbacks: '%fallback_locales%' }
+  secret: '%env(APP_SECRET)%'
   router:
     resource: '%kernel.project_dir%/app/config/routing.yml'
     strict_requirements: ~
