working project w/o fontawesome icons

--- a/config/packages/webpack_encore.yaml
+++ b/config/packages/webpack_encore.yaml
@@ -1,7 +1,7 @@
 webpack_encore:
   # The path where Encore is building the assets - i.e. Encore.setOutputPath()
   #output_path: '%kernel.public_dir%/build' -> S4 syntax…
-  output_path: '%kernel.project_dir%/web/build'
+  output_path: '%kernel.project_dir%/public/build'
 
     # if you have multiple builds:
     # builds:
