--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/security-bundle": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/templating": "4.4.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "tanigami/specification": "^1.3",
