--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,23 +1,63 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        AppBundle\Entity\User:
+            algorithm: bcrypt
+            cost: 12
+
+    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        users_in_memory: { memory: null }
+        main:
+            id: '%provider%'
+        user_db:
+            entity: { class: AppBundle\Entity\User, property: username }
+
     firewalls:
+        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        login:
+            pattern:  ^/api/login
+            stateless: true
+            anonymous: true
+            json_login:
+                check_path:               /api/login_check
+                success_handler:          lexik_jwt_authentication.handler.authentication_success
+                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+                provider:                 user_db
+
+        api:
+            pattern: ^/api/
+            stateless: true
+            guard:
+                provider: user_db
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            pattern: ^/
+            provider: main
+            switch_user: true
+            guard:
+                authenticator: '%authenticator%'
+                provider: main
+            logout_on_user_change: true
+            anonymous: ~
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
+    role_hierarchy:
+        ROLE_ADMIN:
+            - ROLE_USER
+            - ROLE_ALLOWED_TO_SWITCH
+        ROLE_API:
+            - ROLE_API_GET_YEARS
+            - ROLE_API_GET_YEAR
+            - ROLE_API_POST_YEAR
+            - ROLE_API_PUT_YEAR
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/, roles: ROLE_API }
+        - { path: "^/[^/]{1,5}/admin/settings", role: ROLE_SUPER_ADMIN }
+        - { path: "^/[^/]{1,5}/admin", role: ROLE_ADMIN }
+        - { path: ^/, role: ROLE_USER }
