--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,7 +22,15 @@ parameters:
                 email: '%env(LDAP_UNS_REPOSITORIES_TEACHER_MAPPING_EMAIL)%'
                 firstname: '%env(LDAP_UNS_REPOSITORIES_TEACHER_MAPPING_FIRSTNAME)%'
                 lastname: '%env(LDAP_UNS_REPOSITORIES_TEACHER_MAPPING_LASTNAME)%'
-
+    test_authenticator:
+        current: '%env(TEST_AUTHENTICATOR_CURRENT)%'
+        users:
+            user1:
+                firstname: '%env(TEST_AUTHENTICATOR_USERS_USER1_FIRSTNAME)%'
+                lastname: '%env(TEST_AUTHENTICATOR_USERS_USER1_LASTNAME)%'
+                email: '%env(TEST_AUTHENTICATOR_USERS_USER1_EMAIL)%'
+                roles:
+                    - ROLE_USER
 services:
     _defaults:
         autowire: true
